letter spacing for nav link corrected

--- a/src/component/Header.css
+++ b/src/component/Header.css
@@ -49,7 +49,7 @@
   color: grey;
   font-size: 16px;
   font-weight: 400;
-  letter-spacing: 3px;
+  letter-spacing: 0px;
   font-style: regular;
   line-height: 19px;
 } 
